# observable

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  meson.build  obs.h
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml
benchmarks/: obs_benchmarks.cpp
obs/: connection.cpp  connection.h  fast_list.h  lists.h  observable.h  observers.h  safe_list.h  signal.h  slot.h
tests/: CMakeLists.txt  adapt_slots.cpp  count_signals.cpp  disconnect_on_dtor.cpp  disconnect_on_rescursive_signal.cpp  disconnect_on_signal.cpp  multithread.cpp  multithread_futures.cpp  observers.cpp  reconnect_on_notification.cpp  reconnect_on_signal.cpp  signals.cpp
